# substrate-python

./: .gitignore  .pre-commit-config.yaml  .pypirc.example  DEVELOPING.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: pydantic-1.yml  pydantic-2.yml  python-3-9.yml
examples/: background-removal.py  basic.py  basic_embedding.py  basic_rag.py  explicit_edges.py  intro.py  media_pipe.py  news_chatbot_client.py  news_chatbot_rag_embeddings.py  notebook.py  remove_bg.py  remove_bg_objects.py  remove_foreground.py  streaming.py  template.py
examples/descript/: generate-chapters.ts  generate.py  generate_chapters.py  index.j2
examples/mixture-of-agents/: ask.py  util.py
examples/notebooks/: Makefile  background-removal.py  basic.py  blog-images.py  code-interpreter.py  code-tool.py  edit-poster.py  film-showings.py  first-graph.py  gen-image-chain.py  gen-image-embed.py  image-game.py  inpaint-poster.py  interior-design.py  interpolate.py  intro-example.py  logo-controlnet.py  logo-inpaint.py  prompt-enhance.py  pyproject.toml  run-code-chain.py  svd.py
examples/streaming/fastapi-example/: main.py
examples/techniques/: README.md
examples/workshop/: README.md
examples/workshop/descript/: util.py
examples/workshop/mixture-of-agents/: ask.py
scripts/: sync_codegen.py  sync_version.py
substrate/: GEN_VERSION  __init__.py  _client.py  _version.py  dataclass_models.py  future_dataclass_models.py  if_node.py  nodes.py  run_python.py  streaming.py  substrate.py  substrate_response.py  typeddict_models.py
substrate/core/: _version.py  base_future.py  coregraph.py  corenode.py  future_directive.py  id_generator.py  models.py  sb.py
substrate/core/client/: find_futures_client.py  future.py  graph.py
substrate/core/node_ext/: box.py  logic.py
tests/pydantic-1/: pyproject.toml
tests/pydantic-1/tests/: test_basic.py
tests/pydantic-2/: basic.py  pyproject.toml
tests/pydantic-2/tests/: test_basic.py
tests/python-3-9/: pyproject.toml
tests/python-3-9/tests/: test_basic.py  test_substrate.py
tests/python-3-9/tests/substrate/: test_substrate.py
