[tool.poetry]
name = "substrate-notebooks"
version = "0.0.0"
description = ""
authors = ["substrate <support@substrate.run>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
marimo = "^0.3.4"
substrate = "*"
openai = "^1.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
