[tool.poetry]
name = "test-pydantic-1"
version = "0.0.0"
description = ""
authors = ["substrate <support@substrate.run>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "<2.0.0"
substrate = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
