[tool.poetry]
name = "test-pydantic-2"
version = "0.0.0"
description = ""
authors = ["substrate <support@substrate.run>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
networkx = "^3.3"
httpx = "^0.27.0"
distro = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
