[tool.poetry]
name = "test-pydantic-2"
version = "0.0.0"
description = ""
authors = ["substrate <support@substrate.run>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.11.0"
pydantic = "^2.7.1"
networkx = "3.2.1"
httpx = "^0.27.0"
distro = "^1.9.0"
httpx-sse = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
